@@ -2,6 +2,8 @@ changelog
 
 -- next
 
++ Somewhat functional admin console (TTY).
+
 + More JS free fallbacks for some basic functions.
 
 + Add chpass command.
